[CALCITE-5737] Support JDK 21 and JDK 22
Update dependencies
asm from 7.2 to 9.6
byte-buddy from 1.9.3 to 1.14.15
forbiddenapis from 3.5.1 to 3.7
mockito from 2.23.4 to 3.12.4